# Backend/src/routes/__init__.py
@@ -4,6 +4,7 @@ from .Company import company
 from .Person import person
 from .PPPO import pppo
 from .State import state
+from .Milestone import milestone
 
 BaseRouter = APIRouter()
 
@@ -11,3 +12,4 @@ BaseRouter.include_router(person)
 BaseRouter.include_router(company)
 BaseRouter.include_router(pppo)
 BaseRouter.include_router(state)
+BaseRouter.include_router(milestone)
